[gd_scene load_steps=3 format=2]

[ext_resource path="res://enemies/EquipmentList.gd" type="Script" id=1]
[ext_resource path="res://enemies/EquipTree.gd" type="Script" id=2]

[node name="EquipmentList" type="VBoxContainer"]
margin_right = 424.0
margin_bottom = 720.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Title" type="Label" parent="."]
margin_right = 424.0
margin_bottom = 22.0
text = "Title"
align = 1
valign = 1

[node name="Search" type="LineEdit" parent="."]
margin_top = 26.0
margin_right = 424.0
margin_bottom = 48.0
clear_button_enabled = true
placeholder_text = "Search equipment"
caret_blink = true

[node name="EquipTree" type="Tree" parent="."]
margin_top = 52.0
margin_right = 424.0
margin_bottom = 692.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
allow_reselect = true
hide_folding = true
hide_root = true
script = ExtResource( 2 )

[node name="UpgradedCheck" type="CheckBox" parent="."]
margin_top = 696.0
margin_right = 424.0
margin_bottom = 720.0
text = "Show upgraded equipment"
[connection signal="text_changed" from="Search" to="." method="_on_Search_text_changed"]
[connection signal="cell_selected" from="EquipTree" to="EquipTree" method="_on_EquipTree_cell_selected"]
[connection signal="equipment_selected" from="EquipTree" to="." method="_on_EquipTree_equipment_selected"]
[connection signal="list_updated" from="EquipTree" to="." method="_on_EquipTree_list_updated"]
[connection signal="value_changed" from="EquipTree" to="." method="_on_EquipTree_value_changed"]
[connection signal="pressed" from="UpgradedCheck" to="." method="_on_UpgradedCheck_pressed"]
